tests/functional/lang/eval-fail-derivationOf-no-context.err.exp
error:
       … while calling the 'derivationOf' builtin
         at /pwd/lang/eval-fail-derivationOf-no-context.nix:1:1:
            1| builtins.derivationOf "foo"
             | ^
            2|

       error: 'foo' has no derivation in its context
